[package]
name = "cch23-roaslin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
base64 = "0.21.5"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.40"
image = "0.24.7"
regex = "1.10.2"
ulid = "1.1.0"
uuid = "1.6.1"
chrono = "0.4.31"
shuttle-shared-db = { version = "0.35.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = [
    "runtime-async-std",
    "postgres",
] }
html-escape = "0.2.13"
